--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
+body {
+  background-color: purple;
+}
+
 .App {
   text-align: center;
+  margin: auto;
+  margin-top: 80px;
+  width: 300px;
+  background-color: gray;
+  padding-top: 2rem;
+  border: 2px dashed black;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 5);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  margin-top: auto;
+  font-family: cursive;
+  font-size: xx-large;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  border-radius: 10px;
+  margin-bottom: 0.5em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.output {
+  border: solid black;
+  width: 150px;
+  margin: auto;
+  background-color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  border-radius: 10px;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
